# fdreadoutlibs

./: CMakeLists.txt
apps/: README.md  tpg_algorithms_emulator_WIB2.cxx  tpg_algorithms_emulator_WIBEth.cxx  tpg_apps_issues.hpp  tpg_apps_utilities.hpp  tpg_emulator_utilities.hpp  wib2_tpg_algorithms_emulator.cxx  wibeth_simple_tpg_emulator.cxx  wibeth_tpg_algorithms_emulator.cxx  wibeth_tpg_algorithms_validation.cxx  wibeth_tpg_pattern_generator.cxx
apps/hdf5-converter/: README.md  hdf5_converter.py  hdf5_converter_libs.py  hdf5_converter_libs_img.py
cmake/: fdreadoutlibsConfig.cmake.in
docs/: README.md  tpg_tools.md
include/fdreadoutlibs/: CRTFixedSizeTypeAdapter.hpp  CRTTypeAdapter.hpp  DAPHNEStreamSuperChunkTypeAdapter.hpp  DAPHNESuperChunkTypeAdapter.hpp  DUNEWIBEthTypeAdapter.hpp  DUNEWIBSuperChunkTypeAdapter.hpp  FDReadoutIssues.hpp  FDReadoutTypes.hpp  ProtoWIBSuperChunkTypeAdapter.hpp  SSPFrameTypeAdapter.hpp  TDEAMCFrameTypeAdapter.hpp  TDEFrameTypeAdapter.hpp  TPCTARequestHandler.hpp  TPCTPProcessor.hpp  TPCTPReadoutModel.hpp  TPCTPRequestHandler.hpp  TriggerActivityTypeAdapter.hpp  TriggerPrimitiveTypeAdapter.hpp
include/fdreadoutlibs/crt/: CRTFixedSizeFrameProcessor.hpp  CRTFrameProcessor.hpp
include/fdreadoutlibs/daphne/: DAPHNEFrameProcessor.hpp  DAPHNEListRequestHandler.hpp  DAPHNEStreamFrameProcessor.hpp
include/fdreadoutlibs/ssp/: SSPFrameProcessor.hpp
include/fdreadoutlibs/tde/: TDEFrameProcessor.hpp
include/fdreadoutlibs/tpg/: FrameExpand.hpp  ProcessingTasks.h  RegisterToChannelNumber.hpp  TPGConstants.hpp
include/fdreadoutlibs/wib/: RAWWIBTriggerPrimitiveProcessor.hpp  RawWIBTp.hpp  SWWIBTriggerPrimitiveProcessor.hpp  TPEmulatorModel.hpp  WIBFrameProcessor.hpp  WIBTPHandler.hpp
include/fdreadoutlibs/wib2/: .WIB2FrameProcessor.hpp.swp  .nfs00000000041202c2000004b3  RAWWIBTriggerPrimitiveProcessor.hpp  SWWIBTriggerPrimitiveProcessor.hpp  TPEmulatorModel.hpp  TPRequestHandler.hpp  WIB2FrameProcessor.hpp  WIB2FrameProcessor_TWO_BUFFERS.hpp  WIB2TPHandler.hpp  two_buffers.hpp
include/fdreadoutlibs/wibeth/: WIBEthFrameProcessor.hpp
scripts/: README.md  compare_avx_vs_naive.py  filegen.py
src/: FDReadoutlibs.cpp  TPCTARequestHandler.cpp  TPCTPProcessor.cpp  TPCTPReadoutModel.cpp  TPCTPRequestHandler.cpp
src/crt/: CRTFixedSizeFrameProcessor.cpp  CRTFrameProcessor.cpp
src/daphne/: DAPHNEFrameProcessor.cpp  DAPHNEListRequestHandler.cpp  DAPHNEStreamFrameProcessor.cpp
src/tde/: TDEFrameGrouper.cpp  TDEFrameProcessor.cpp
src/tpg/: DesignFIR.cpp  FrameExpand.cpp  ProcessAVX2.cpp
src/wib/tpg/: FrameExpand.cpp
src/wib2/: .WIB2FrameProcessor.cpp.swp  TPEmulatorModel.cpp  TPRequestHandler.cpp  WIB2FrameProcessor.cpp  WIB2TPHandler.cpp
src/wib2/tpg/: FrameExpand512.cpp.cpp  ProcessAVX2FIR.cpp  ProcessRSAVX2.cpp  RegisterToChannelNumber.cpp
src/wibeth/: WIBEthFrameProcessor.cpp
src/wibeth/tpg/: DesignFIR.cpp  FrameExpand.cpp  ProcessAVX2.cpp  ProcessAVX2FIR.cpp  ProcessAbsRSAVX2.cpp  ProcessRSAVX2.cpp  ProcessStandardRSAVX2.cpp  RegisterToChannelNumber.cpp
test/apps/: .TestTPGAlgorithmsWIBEth.cxx.swp  README.md  ReplayTPG.cxx  TDEFileCreator.cxx  TestRunningSum.cxx  TestSWTPGAlgorithms.cxx  TestSWTPGAlgorithms2.cxx  TestSWTPGAlgorithms3.cxx  TestTPGAlgorithms.cxx  TestTPGAlgorithmsDUNEWIB.cxx  TestTPGAlgorithmsWIBEth.cxx  TestTPGAlgorithmsWIBEth.hpp  WIB2AddFakeHits.cxx  WIB2TestBench512.cxx  WIBEthAddFakeHits.cxx  WIBEthAddTestPattern.cxx  WIBEthBinaryFrameReader.cxx  WIBEthTestBench.cxx  test_bufferedfilewriter_app.cxx  test_tde_data_emulator.cxx  wib2_test_bench.cxx  wibeth_test_bench.cxx
test/apps/SwtpgTest/: RSAvx.hpp  RSNaive.hpp  SwtpgAvx.hpp  (+3 more)
unittest/: WIBEthFrameExpansion_test.cxx
(+39 files in other folders)
